# pymodelcenter

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.rst  class_documentation.html  genindex.html  index.html  integration-tests.xml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  robots.txt  search.html  searchindex.js  tox.ini  versions.json
.github/: dependabot.yml
.github/workflows/: ci_cd.yml
_autosummary/: ansys.modelcenter.workflow.html
_sources/_autosummary/: ansys.modelcenter.workflow.rst.txt
ansys/modelcenter/: __init__.py  engine.py  instance.py  ui_configure_instance.py
ansys/modelcenter/control/: engine.py
ansys/modelcenter/desktop/: __init__.py  engine.py  main.py  modelcenter.py  workflow.py
ansys/modelcenter/workflow/: __init__.py  main.py
ansys/modelcenter/workflow/api/: IAssembly.py  __init__.py  arrayish.py  assemblies.py  assembly.py  component.py  component_metadata.py  custom_metadata_owner.py  data_explorer.py  data_monitor.py  data_type.py  datamonitor.py  dot_net_utils.py  engine.py  format.py  global_parameters.py  group.py  groups.py  i18n.py  iarray.py  iassemblies.py  iassembly.py  ibooleanarray.py  ibooleanarraydatapin.py  ibooleanarrayvariable.py  ibooleandatapin.py  ibooleanvariable.py  icomponent.py  idata_monitor.py  idatamonitor.py  idatapin.py  idatapin_link.py  idatapinreferencebase.py  idoublearray.py  idoublevariable.py  idrivercomponent.py  iengine.py  ifilearray.py  ifilearraydatapin.py  ifilevariable.py  (+44 more)
ansys/modelcenter/workflow/desktop/: __init__.py  modelcenter.py
ansys/modelcenter/workflow/grpc_modelcenter/: MCDProcess.py  __init__.py  abstract_assembly_child.py  abstract_control_statement.py  abstract_datapin_container.py  abstract_renamable.py  abstract_workflow_element.py  assembly.py  base_datapin.py  boolean_datapin.py  boolean_variable.py  component.py  create_datapin.py  create_variable.py  datapin_link.py  double_variable.py  driver_component.py  element_wrapper.py  engine.py  file_datapin.py  format.py  group.py  grpc_error_interpretation.py  integer_datapin.py  integer_variable.py  mcd_grpc_client.py  mcd_process.py  mcd_query.py  real_datapin.py  reference_datapin.py  reference_datapin_metadata.py  reference_property.py  string_datapin.py  string_variable.py  unsupported_type_datapin.py  unsupported_var.py  var_metadata_convert.py  var_value_convert.py  variable.py  variable_container.py  (+2 more)
ansys/modelcenter/workflow/grpc_modelcenter/_visitors/: __init__.py  (+1 more)
doc/: Makefile  make.bat
doc/source/: class_documentation.rst  conf.py  index.rst  links.rst
doc/source/_templates/: custom-class-template.rst  custom-module-template.rst
doc/source/api/: index.rst
doc/source/contributing/: index.rst
doc/source/getting_started/: index.rst
doc/source/user_guide/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
examples/: BasicExample.pxcz  BasicExample.py  CreateWorkflow.py  Datapins.py  EXAMPLES.rst  NewComponentsAndLinks.py  RunWorkflow_dynamicVars.py  RunWorkflow_hardcodedVars.py  SequencesAndArrays.py  TradeStudy_Optimization.py  TraversalExample.pxcz  WorkflowTraversal.py  WorkingWithNames.py  test.py
integration/: __init__.py  conftest.py  test_assembly.py  test_component.py  test_datapins.py  test_engine.py  test_format.py  test_group.py  test_links.py  test_reference_properties.py  test_variables.py  test_workflow.py
integration/test_files/: all_types.pacz  all_types.pxcz  data_assembly_tests.pxcz  file_tests.pxcz  linked_quadratics.pxcz  mcre.pxcz  multiple_linked_identity.pxcz  optimizer_setup_test.pxcz  process_sequence_tests.pxcz  reference_properties_tests.pxcz  reference_tests.pxcz
protos/: ModelCenter-standin.proto  generate-proto.bat  modelcenter.proto
src/ansys/modelcenter/api/: __init__.py  module.py  other_module.py
src/ansys/modelcenter/workflow/: __init__.py
tests/: conftest.py  mock_access.py  test_abstract_workflow_element.py  test_arrayish.py  test_assemblies.py  test_assembly.py  test_boolean_datapin.py  test_boolean_variable.py  test_component.py  test_custom_metadata_owner.py  test_datamonitor.py  test_datapin.py  test_datapin_container.py  test_datapin_link.py  test_dot_net_utils.py  test_double_variable.py  test_engine.py  test_engineeringworkflow_api.py  test_file_datapin.py  test_format.py  test_formattable_variable.py  test_global_parameters.py  test_group.py  test_grpc_assembly.py  test_grpc_group.py  test_grpc_var_value_convert.py  test_iassemblies.py  test_iassembly.py  test_icomponent.py  test_idata_monitor.py  test_idatamonitor.py  test_ifilearray.py  test_ifilevariable.py  test_iformat.py  test_iglobal_parameters.py  test_igroup.py  test_igroups.py  test_iif_component.py  test_integer_datapin.py  test_integer_variable.py  (+23 more)
tests/grpc_server_test_utils/: client_creation_monkeypatch.py  client_creation_monkeypatch_usage.py  mock_engine_server.py  mock_file_value.py  mock_format_server.py  mock_grpc_exception.py  mock_server_usage.py  test_server.py
version/: index.html
version/0.1/: 404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_static/: search.json
version/0.1/contributing/: index.html
version/0.1/user_guide/: index.html
version/dev/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/contributing/: index.rst.txt
version/dev/_sources/getting_started/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/contributing/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: .buildinfo  404.html  genindex.html  index.html  objects.inv  py-modindex.html
version/stable/_sources/api/: index.rst.txt
version/stable/api/: index.html
version/stable/contributing/: index.html
version/stable/getting_started/: index.html
(+686 files in other folders)
