[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-modelcenter-workflow"
version = "0.1.dev0"
description = "A python wrapper for ModelCenter Desktop"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows Vista",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows Server 2003",
    "Operating System :: Microsoft :: Windows :: Windows Server 2008",
]
dependencies = [
    "ansys-platform-instancemanagement>=1.1.1",
    "ansys-api-modelcenter>=0.3.1",
    "numpy>=1.22.3",
    "overrides>=6.1",
    "pyansys-tools-variableinterop>=0.1.1",
    "protobuf>=3.12.2",
]

[project.optional-dependencies]
doc=[
    "Sphinx==7.1.2",
    "numpydoc==1.5.0",
    "ansys-sphinx-theme==0.10.0",
    "sphinx-copybutton==0.5.2",
    "pyansys-tools-variableinterop==0.1.1",
]
tests = [
    "grpcio==1.59.0",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "pyansys-tools-variableinterop==0.1.1",
]
dev = [
    "ansys-engineeringworkflow-api@git+https://github.com/ansys/ansys-engineeringworkflow-api.git", # not released yet
]

[project.urls]
Source = "https://github.com/ansys/pymodelcenter"
Issues = "https://github.com/ansys/pymodelcenter/issues"
Discussions = "https://github.com/ansys/pymodelcenter/discussions"
Documentation = "https://modelcenter.docs.pyansys.com"
Releases = "https://github.com/ansys/pymodelcenter/releases"

[tool.flit.module]
name = "ansys.modelcenter.workflow"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests", "integration"]


[tool.codespell]
skip = '*.pyc,*.txt,*.gif,*.png,*.jpg,*.js,*.html,*.doctree,*.ttf,*.woff,*.woff2,*.eot,*.mp4,*.inv,*.pickle,*.ipynb,flycheck*,./.git/*,./.hypothesis/*,*.yml,./doc/build/*,./doc/images/*,./dist/*,*~,.hypothesis*,./doc/source/examples/*,*cover,*.dat,*.mac,build,./factory/*,PKG-INFO,*.mypy_cache/*,./_unused/*,./doc/source/_templates/*'
ignore-words = "doc/styles/Vocab/ANSYS/accept.txt"
quiet-level = 3